<resources>
    <string name="app_name">Weather Station</string>
    <string name="app_id">794B7BBF</string>
    <string name="activity_device">Device List</string>
    <string name="activity_service_list">Service List</string>
    <string name="activity_device_connect">Device Connect</string>
    <string name="namespace">urn:x-cast:com.google.cast.sample.helloworld</string>

    <string name="action_settings">Settings</string>
    <string name="dashes">----</string>

    <!-- BLE example strings -->
    <string name="label_data">Data:</string>
    <string name="label_device_address">Address:</string>
    <string name="label_device_name">Device:</string>
    <string name="label_state">State: </string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <!-- Device Errors -->
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="list_item_device">Device List</string>
    <string name="no_data">No data</string>

    <!-- Menu Strings -->
    <string name="menu_main_view_services">View Services</string>
    <string name="menu_main_devices">Devices</string>
    <string name="menu_device_scan">Scan</string>
    <string name="menu_device_stop">Stop</string>

    <string name="device_connect">Connect</string>
    <string name="device_disconnect">Disconnect</string>
    <string name="menu_main_playon">Play on...</string>
</resources>
