<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/menu_main_playon"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always" />

    <item android:id="@+id/main_devices"
        android:title="@string/menu_main_devices"
        android:icon="@mipmap/ic_launcher_action"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/main_disconnect"
        android:title="@string/device_disconnect"
        android:orderInCategory="2" />

    <item android:id="@+id/main_view_services"
        android:title="@string/menu_main_view_services"
        android:orderInCategory="3" />
</menu>